fixed overflowing text in cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,11 +354,13 @@ h2 {
   height: 100%;
   background-color: #fff;
   border: 1px solid #a09f9f;
+  box-shadow: 0px 0px 1px 1px #a09f9f inset;
   border-radius: 10px;
   align-items: center;
   align-self: center; }
   .profile:hover {
-    cursor: pointer; }
+    cursor: pointer;
+    transform: scale(1.1); }
 
 .userImage {
   float: left;
@@ -372,17 +374,20 @@ h2 {
 
 .name {
   font-size: 1em;
-  margin: 0; }
+  margin: 0;
+  width: 150px; }
 
 .info {
   display: block;
-  width: calc(304px - 30%); }
+  width: calc(304px - 30%);
+  overflow-wrap: break-word; }
 
 .info p {
   color: gray;
   font-size: .8em;
   margin-top: 5px;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  width: 150px; }
 
 .overlay {
   position: absolute;
