--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -52,11 +52,13 @@ h2 {
     height: 100%;
     background-color: #fff;
     border: 1px solid rgb(160, 159, 159);
+    box-shadow: 0px 0px 1px 1px rgb(160, 159, 159) inset;
     border-radius: 10px;
     align-items: center;
     align-self: center;
     &:hover {
     cursor: pointer;
+    transform: scale(1.1);
     }
 }
 
@@ -74,11 +76,13 @@ h2 {
 .name {
     font-size: 1em;
     margin: 0;
+    width: 150px;
 }
 
 .info {
     display: block;
     width: calc(304px - 30%);
+    overflow-wrap: break-word;
 }
 
 .info p {
@@ -86,6 +90,7 @@ h2 {
     font-size: .8em;
     margin-top: 5px;
     margin-bottom: 5px;
+    width: 150px;
 }
 
 // Modal overlay<=====================================
